라인체크 그래프 완성!!!!!!

--- a/amChart/linechart/linechart_01.html
+++ b/amChart/linechart/linechart_01.html
@@ -467,6 +467,8 @@
                 specialDate.getMonth() === item.date.getMonth() &&
                 specialDate.getFullYear() === item.date.getFullYear()
             ));
+
+            console.log(resultDate);
           });
 
           // 이미지 블릿 클릭
