--- a/amChart/linechart/linechart_checkbox_05.html
+++ b/amChart/linechart/linechart_checkbox_05.html
@@ -35,7 +35,12 @@
         font-size: 1.3rem;
         font-weight: 400;
         color: rgba(255, 255, 255, 0.8);
-        margin-right: 1rem;
+      }
+      .lineTooltip li strong {
+        display: inline-block;
+        font-size: 1.3rem;
+        font-weight: 500;
+        color: rgba(255, 255, 255, 1);
       }
 
       .lineTooltip li:first-child {
@@ -56,37 +61,37 @@
         transform: translate3d(0, -50%, 0);
       }
 
-      .lineTooltip li:nth-child(2)::after {
+      .lineTooltip li.series1::after {
         background-color: #f0295a;
       }
-      .lineTooltip li:nth-child(3)::after {
+      .lineTooltip li.series2::after {
         background-color: #26c1f8;
       }
-      .lineTooltip li:nth-child(4)::after {
+      .lineTooltip li.series3::after {
         background-color: #1db5ae;
       }
-      .lineTooltip li:nth-child(5)::after {
+      .lineTooltip li.series4::after {
         background-color: #5a56e1;
       }
-      .lineTooltip li:nth-child(6)::after {
+      .lineTooltip li.series5::after {
         background-color: #fecb27;
       }
-      .lineTooltip li:nth-child(7)::after {
+      .lineTooltip li.series6::after {
         background-color: #fe8fd6;
       }
-      .lineTooltip li:nth-child(8)::after {
+      .lineTooltip li.series7::after {
         background-color: #183dff;
       }
-      .lineTooltip li:nth-child(9)::after {
+      .lineTooltip li.series8::after {
         background-color: #8b00ff;
       }
-      .lineTooltip li:nth-child(10)::after {
+      .lineTooltip li.series9::after {
         background-color: #41e237;
       }
       .lineTooltip-msg {
         position: relative;
         padding: 0.5rem 0;
-        margin: 0.5rem 0 0;
+        margin: 0.7rem 0 0;
         border-top: 1px solid rgba(255, 255, 255, 0.2);
       }
       .lineTooltip-msg::before {
@@ -372,7 +377,6 @@
               series.name = seriesInfo.name;
               series.specialMsg = specialDatesMsg;
 
-              console.log(seriesInfo.name);
               // 라인, 그라데이션 스타일
               setLineGradientStyle(seriesKey, seriesInfo);
 
@@ -458,11 +462,16 @@
           });
 
           // 활성화된 시리즈의 데이터를 포함
-          if (!targetSeries.hidden) {
-            const seriesName = targetSeries.name || "Unknown Series";
-            const valueKey = targetSeries.dataFields.valueY;
-            tooltipHTML += `<li><span>${seriesName}</span>: <strong>{${valueKey}}%</strong></li>`;
-          }
+          // 활성화된 모든 시리즈의 데이터를 포함
+          chart.series.each(function (series, index) {
+            if (!series.hidden) {
+              const seriesName = series.name || "Unknown Series";
+              const valueKey = series.dataFields.valueY;
+
+              tooltipHTML += `<li class=${valueKey}><span>${seriesName}</span> : <strong>{${valueKey}}%</strong></li>`;
+            }
+          });
+
           tooltipHTML += "</ul>";
 
           // 특별한 날짜에 해당하는 메시지가 있을 경우 툴팁에 추가
@@ -470,7 +479,6 @@
             tooltipHTML += `<article class=lineTooltip-msg><strong>${specialMessage}</strong></article>`;
           }
           tooltipHTML += "</div>";
-
           return tooltipHTML;
         };
 
@@ -565,23 +573,6 @@
             // 선택된 날짜 정보 가져오기
             bulletEventHandler(event);
           });
-        };
-
-        const createTooltipHTML = () => {
-          let tooltipHTML = "<ul class='lineTooltip'>";
-          tooltipHTML += "<li>{date}</li>"; // 날짜 행 추가
-
-          // seriesManager.seriesMap을 활용하여 활성화된 시리즈 정보만 포함
-          Object.keys(seriesManager.seriesMap).forEach((key) => {
-            const series = seriesManager.seriesMap[key];
-            if (!series.hidden) {
-              const seriesName = series.name || "Unknown Series";
-              tooltipHTML += `<li><span>${seriesName}</span>: <strong>{${key}}%</strong></li>`;
-            }
-          });
-
-          tooltipHTML += "</ul>";
-          return tooltipHTML;
         };
 
         // 체크박스 생성 함수
@@ -720,7 +711,18 @@
               value: [
                 1.23, 7.56, 9.89, 41.23, 7.56, -3.89, -1.23, 7.56, 29.89, 3.89,
               ],
-              specialDay: ["", "", "금리인상", "", "", "", "", "", "", ""],
+              specialDay: [
+                "",
+                "",
+                "금리인상",
+                "",
+                "",
+                "",
+                "상한가",
+                "",
+                "",
+                "",
+              ],
               color: [
                 {
                   line: "rgba(240, 41, 90, 1)",
